--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -6,7 +6,7 @@
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
 * {
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 	background-color: rgba(19,30,38,0.1);
 }
 
@@ -21,6 +21,7 @@
 	height: auto;
 	position: fixed;
 	padding-top: 15px;
+	margin-top: -30px;
 }
 
 /* navbar classes should contain left and right elements. Left is logo/site name. right side is the menu bar. */
@@ -30,11 +31,13 @@
 	width: 100%;
 	text-decoration: none;
 	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .header-bar a:hover {
 	color: #DAB485;
 	text-decoration: none;
+
 }
 
 .header-bar a {
@@ -78,20 +81,27 @@
 
 .background-box {
 	width: 100%;
-	height: 1000px;
+	height: 700px;
 }
 
 .menu-item {
-	padding: 5px;
+	transition: all 0.3s ease-out;
 	margin: 5px;
+    transform: translate(-50%,-50px);
+}
+
+.menu-item:hover {
+	border-top-style: solid;
+	border-top-width: 5px;
+	border-color: #DAB485;
 }
 
 .jumbotron-picture {
 	background-image: url("images/mountains2.jpg");
-	background-attachment: fixed;
+	background-attachment: relative;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	top: 0;
-	margin: 0px -10px 0px -10px;
+	margin: -30px -15px 0px -15px;
 }
