--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -5,22 +5,151 @@
 
 /* This file allows you to override default styles in one central location for easier upgrade and maintenance. */
 
+/* Entire Page Styles */
+
+html {
+	font-family: sans-serif;
+}
+
+body {
+	margin: 0;
+}
+
+header, footer, main, menu, nav, section {
+	display: block;
+}
+
+a {
+	background-color: transparent;
+}
+
+a:active,a:hover {
+	outline: 0;
+}
+
+div, nav, ul {
+	background-color: rgba(19,30,38,0.1); /*debug*/
+}
+
+p {
+	background-color: rgba(100,100,100,0.2); /*debug*/
+}
+
+li {
+	/*background-color: yellow; /*debug*/ 
+}
+/* End Entire Page Styles */
+
+
+
+/* Styles for Header */
+
+#header {
+	font-family:"gotham_boldregular"; /* need to add fonts to html */
+	z-index: 99;
+	padding-top: 25px;
+	position: fixed;
+	left: 0;
+	right: 0;
+}
+
+#company-branding {
+	display: inline-block;
+	padding-top: 10px;
+}
+
+#header .site-name a {
+	color: #fff;
+	font-size: 1.333em;
+	text-transform: uppercase;
+}
+
+#header .block-menu {
+	float:right;
+}
+
+
+
+@media (min-width: 992px) {
+	#header #nav-menu-top {
+		display:inline-block;
+		padding-top: 10px;
+	}
+
+	#nav-menu-top > ul.menu {
+		margin:0;
+	}
+
+	#nav-menu-top > ul.menu li.menu-item--active-trail a {
+		color: #dab485;
+	}
+
+	#nav-menu-top > ul.menu li.menu-item--active-trail a:before {
+		width: 100%;
+	}
+
+	#nav-menu-top > ul.menu > li {
+		list-style:none;
+		float:left;
+		margin: 0 13px;
+		padding-top: 0;
+		position: relative;
+	}
+
+	#nav-menu-top > ul.menu  li a {
+		position: relative;
+	}
+
+	#nav-menu-top > ul.menu  li a:before {
+		background-color: #dab485;
+		bottom: 0;
+		content: "";
+		height: 4px;
+		left: 50%;
+		margin: 0 auto;
+		position: absolute;
+		top: auto;
+		transform: translate(-50%,-50px);
+		transition: width 0.3s ease 0s;
+		width: 0;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* End Styles for Header */
+
+
+
+
+
+
 .jumbotron-picture {
-	background-color: blue;
+	background-color: transparent;
 	background-image: url("images/mountains2.jpg");
 	background-attachment: relative;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	top: 0;
-	margin: -30px -15px 0px -15px;
+	
+}
+.background-box {
+	height: 800px;
+	z-index: 0;
+	width: 100%;
 }
 
-div {
-	background-color: rgba(19,30,38,0.1);
-}
-
-/*debug*/
-a {
-	background-color: rgba(100,0,20,0.1);
-}
