--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -25,6 +25,7 @@ a {
 
 a:active,a:hover {
 	outline: 0;
+	text-decoration: none;
 }
 
 div, nav, ul {
@@ -38,6 +39,26 @@ p {
 li {
 	/*background-color: yellow; /*debug*/ 
 }
+
+#wrapper {
+	top: 0;
+	margin: 0;
+	margin-top: -28px;
+}
+
+.section1 {
+	background-color: rgba(200,100,0,0.2); /*debug*/
+	width: 80%;
+	margin: auto;
+
+	p {
+		display: inline-block; /*debug*/
+		width: 10%;
+		margin: auto;
+	}
+}
+
+
 /* End Entire Page Styles */
 
 
@@ -51,6 +72,10 @@ li {
 	position: fixed;
 	left: 0;
 	right: 0;
+}
+
+#header .container .region-header {
+	width: 70%;
 }
 
 #company-branding {
@@ -140,16 +165,18 @@ li {
 .jumbotron-picture {
 	background-color: transparent;
 	background-image: url("images/mountains2.jpg");
-	background-attachment: relative;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: 0px -600px;
 	background-size: cover;
 	top: 0;
+	height: 700px;
+/*move sky up out of picture */
 	
 }
-.background-box {
-	height: 800px;
+.background-box { /* This creates space for the jumbotron picture to be displayed */
+	height: 700px;
 	z-index: 0;
 	width: 100%;
+
 }
 
