--- a/src/css/_custom.scss
+++ b/src/css/_custom.scss
@@ -121,6 +121,12 @@ li {
 		width: auto;
 	}
 
+	#header div.region-header > .header-nav {
+		display:inline-block;
+		width: auto;
+		float: right;
+	}
+
 	#header .region-header {
 		margin: auto;
 		width: auto;
@@ -164,12 +170,24 @@ li {
 		width: 0;
 	}
 
-	#nav-menu-top > ul.menu li.menu-item--expanded ul { /* need to hide dropdown UL, but display the li. */
+	#nav-menu-top > ul.menu li.menu-item--expanded ul { 
 		display: none;
 	}
 
 	#nav-menu-top > ul.menu li.menu-item--expanded:hover ul {
 		display: block;
+		background-color: #313a41;
+		float: left;
+		padding: 0;
+		padding: 0 15px 10px 15px;
+		width: 150px;
+
+		li {
+			padding-top: 0.8em;
+			float: left;
+			display: block;
+			font-size: 0.8em
+		}
 	}
 
 	#login {
@@ -183,7 +201,7 @@ li {
 
 
 
-
+	
 }
 
 
